--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "discord.js": "^14.25.1",
-    "discord.js-selfbot-v13": "^3.7.1"
+    "discord.js-selfbot-v13": "^3.7.1",
+    "dotenv": "^17.2.4"
   }
 }
